sample coding exercises